src/current/_includes/v22.2/known-limitations/row-level-ttl-limitations.md
- You cannot use [foreign keys](foreign-key.html) to create references to or from a table that uses Row-Level TTL. [cockroachdb/cockroach#76407](https://github.com/cockroachdb/cockroach/issues/76407)
- Any queries you run against tables with Row-Level TTL enabled do not filter out expired rows from the result set (this includes [`UPDATE`s](update.html) and [`DELETE`s](delete.html)). This feature may be added in a future release. For now, follow the instructions in [Filter out expired rows from a selection query](row-level-ttl.html#filter-out-expired-rows-from-a-selection-query).
- Enabling Row-Level TTL on a table with multiple [secondary indexes]({{ page.version.version }}/indexes.md) can have negative performance impacts on a cluster, including increased [latency]({{ page.version.version }}/common-issues-to-monitor.md#service-latency) and [contention]({{ page.version.version }}/performance-best-practices-overview.md#transaction-contention). This is particularly true for large tables with terabytes of data and billions of rows that are split up into multiple ranges across separate nodes.
    - Increased latency may occur because secondary indexes aren't necessarily stored on the same underlying [ranges]({{ page.version.version }}/architecture/overview.md#architecture-range) as a table's [primary indexes]({{ page.version.version }}/indexes.md). Further, the secondary indexes' ranges may have [leaseholders]({{ page.version.version }}/architecture/overview.md#architecture-leaseholder) located on different nodes than the primary index.
    - Increased contention may occur because [intents]({{ page.version.version }}/architecture/transaction-layer.md#write-intents) must be written as part of performing the deletions.
    - Finally, secondary indexes can also have a negative impact on the overall performance of [TTL jobs]({{ page.version.version }}/row-level-ttl.md#view-running-ttl-jobs). According to internal testing, the [TTL job processing rate]({{ page.version.version }}/ui-ttl-dashboard.md#processing-rate) is worse on tables with secondary indexes. If you encounter this situation, decreasing the [`ttl_delete_batch_size` storage parameter]({{ page.version.version }}/row-level-ttl.md#param-ttl-delete-batch-size) may help by decreasing the number of ranges that need to be accessed by the job.
